# nyx

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  components.json  index.html  package.json  skills-lock.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
apps/electron/: GATE-PHASE4.md  GATE-PHASE7.md  PACKAGING.md  electron-builder.yml  package.json  tsconfig.json
apps/electron/scripts/: bundle.cjs  copy-napi.cjs  copy-renderer.cjs  copy-resources.cjs  dev.cjs  gate-echo-harness.cjs  gate-phase7.cjs  package.cjs  smoke-bridge-e2e.cjs  smoke-core-host.cjs  smoke-dev-launch.cjs  smoke-flow-control-live.cjs  smoke-flow-control.cjs  smoke-lifecycle.cjs  smoke-mcp-full-surface.cjs  smoke-package.cjs  smoke-prod-load.cjs  smoke-single-instance.cjs  smoke-wayland-flags.cjs  smoke-window.cjs
apps/frontend/: package.json  vite.config.ts  vitest.config.ts
apps/frontend/src/: app.tsx  globals.css  main.tsx
apps/tauri/: README.md  package.json
apps/tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/src/: bridge.rs  lib.rs  main.rs  mcp_tools.rs
crates/nyx-core/: BASELINE-REDS.md  Cargo.toml
crates/nyx-core/migrations/00000000000001_create_terminals/: up.sql
crates/nyx-core/migrations/00000000000003_create_managed_commands/: up.sql
crates/nyx-core/migrations/00000000000005_command_instance_unread_outcome/: up.sql
crates/nyx-core/migrations/00000000000009_project_order/: down.sql  up.sql
crates/nyx-core/resources/claude-plugin/: .mcp.json
crates/nyx-core/resources/claude-plugin/.claude-plugin/: marketplace.json  plugin.json
crates/nyx-core/resources/claude-plugin/hooks/: hooks.json  nyx-session-hook.cjs
crates/nyx-core/src/: agent.rs  agent_activity.rs  agent_resume.rs  ansi.rs  command.rs  db.rs  frontier.rs  integrations.rs  lib.rs  mcp.rs  mcp_runtime.rs  mcp_tools_core.rs  onboarding.rs  osc133.rs  osc7.rs  pkgjson.rs  plugin.rs  portless.rs  proc.rs  proc_stats.rs  proc_util.rs  pty.rs  resolve.rs  schema.rs  shellinteg.rs  subfolder.rs
crates/nyx-napi/: Cargo.toml  build.rs  index.d.ts  index.js  package.json
crates/nyx-napi/scripts/: verify-abi.cjs  verify-command-runtime.cjs  verify-core.cjs  verify-exec-state.cjs
crates/nyx-napi/src/: command.rs  core_db.rs  lib.rs  mcp.rs
docs/product/: README.md  agent-harness.md  data-model.dbml  domain-model.md  information-architecture.md  open-questions.md  roadmap.md  technical-architecture.md  vision.md  workflows.md
docs/product/decisions/: PDR-0001-single-product-nyx.md  PDR-0002-single-business-backend.md  PDR-0003-execution-first-class.md  PDR-0004-generic-local-review.md  PDR-0005-shared-ui-mcp-state.md  PDR-0006-electron-rust-monorepo.md  PDR-0007-rust-sidecar-ipc.md  PDR-0008-workspace-pivot-execution-rejected.md  PDR-0009-prototype-annexe-prd.md  PDR-0010-design-system-et-rendu-prototype.md  PDR-0011-harness-playbook-pas-moteur.md  PDR-0012-review-modele-minimal.md  PDR-0013-multi-repo-repository-logique.md
e2e/: README.md  package.json  wdio.conf.cjs
e2e/specs/: commands.e2e.cjs  idle-replay.e2e.cjs  rail-and-list.e2e.cjs  restore-01-seed.e2e.cjs  restore-02-verify.e2e.cjs  restore-helpers.cjs  sidebar-redesign.e2e.cjs  terminal.e2e.cjs  typing.e2e.cjs  workspace.e2e.cjs
src/: App.tsx  app.tsx  globals.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/00000000000002_create_projects_workspaces/: down.sql  up.sql
src-tauri/migrations/00000000000003_create_managed_commands/: down.sql
src-tauri/migrations/00000000000004_terminal_exec_state/: down.sql  up.sql
src-tauri/migrations/00000000000005_command_instance_unread_outcome/: down.sql
src-tauri/migrations/00000000000006_command_instance_prev_run/: down.sql  up.sql
src-tauri/migrations/00000000000007_create_agent_sessions/: down.sql  up.sql
src-tauri/migrations/00000000000008_project_resume_agent_sessions/: down.sql  up.sql
src-tauri/resources/claude-plugin/.claude-plugin/: plugin.json
src-tauri/resources/claude-plugin/hooks/: hooks.json
src-tauri/src/: agent.rs  agent_resume.rs  bridge.rs  command.rs  db.rs  lib.rs  mcp.rs  mcp_tools.rs  onboarding.rs  osc133.rs  pathnorm.rs  pkgjson.rs  plugin.rs  portless.rs  pty.rs  resolve.rs  schema.rs  shellinteg.rs  subfolder.rs
src/components/chrome/: chrome-bar.test.tsx  chrome-bar.tsx  chrome.browser.test.tsx  close-warning.test.tsx  close-warning.ts  window-controls.test.tsx  window-controls.tsx
src/components/command/: command-controls.test.tsx  command-controls.tsx  command-form.tsx  command-info-bar.tsx  command-output-panel.test.tsx  command-output-panel.tsx  command-source-section.tsx  command-view.test.tsx  command-view.tsx  import-utils.test.ts  project-commands-dialog.test.tsx  project-commands-dialog.tsx  use-command-exit-code.ts  use-command-instances.test.tsx  use-command-instances.ts  use-command-output.ts  use-command-state.ts  use-commands.test.ts  use-commands.ts
src/components/sidebar/: active-rail.tsx  app-sidebar.test.tsx  app-sidebar.tsx  auto-label.test.ts  auto-label.ts  folder-picker.test.ts  folder-picker.ts  item-motion.test.tsx  item-motion.ts  project-dialog.tsx  project-item.tsx  reorder-terminal-item.tsx  restore-reconstruction.test.tsx  run-state.test.tsx  run-state.tsx  section-motion.ts  settings-dialog.test.tsx  settings-dialog.tsx  sidebar-motion.test.tsx  sidebar.browser.test.tsx  sidebar.test.tsx  sidebar.tsx  sortable-terminal-item.tsx  terminal-deck.browser.test.tsx  terminal-deck.test.tsx  terminal-deck.tsx  terminal-item.agent-icon.test.tsx  terminal-item.test.tsx  terminal-item.tsx  terminal-manager.acknowledge.test.tsx  terminal-manager.exec-state.test.tsx  terminal-manager.test.tsx  terminal-manager.tsx  use-agent-sessions.tsx  use-auto-label.test.tsx  use-manual-add.test.tsx  use-manual-add.tsx  use-projects.test.tsx  use-projects.ts  use-terminals.busy-state.test.tsx  (+6 more)
src/components/terminal/: restore-injection.test.tsx  scrollback-persist.ts  (+9 more)
(+168 files in other folders)
