[package]
name = "nyx"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nyx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# Native folder picker for the manual add-project / add-workspace flow (PRD-2
# Phase 2): `open({ directory: true })` on the JS side. The folder/open
# permission is granted in `capabilities/default.json`.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
anyhow = "1"
# Terminal record ids are UUIDv7 (time-ordered: globally unique + stable for
# external/MCP references and any future multi-device sync, while keeping index
# locality). Generated backend-side; stored as TEXT.
uuid = { version = "1", features = ["v7"] }
# Persistence layer. SQLite via Diesel (see ADR-0001): query DSL checked at
# compile time, `schema.rs` committed (no DB needed at build). `bundled` vendors
# SQLite so there is no system-library dependency. `returning_clauses_for_sqlite_3_35`
# enables RETURNING on INSERT (round-trips the row without a second SELECT).
diesel = { version = "2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

# Process-group (process-tree) kill for managed commands: the runner sends
# SIGTERM/SIGKILL to the child's process GROUP (`kill(-pgid, …)`) so stopping a
# service reaps the whole tree, not just the parent shell. Already in the tree
# transitively via portable-pty; pinned here so `src/command.rs` compiles on Unix.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Mock runtime for bridge integration tests (no real webview).
tauri = { version = "2", features = ["test"] }
# Used by the bridge orphan-process test to probe (via `kill(pid, 0)`) that the
# child shell is really dead after `pty_close` — i.e. no orphaned PTY process.
# Already in the dependency tree (transitively via portable-pty); pinned here so
# the dev-only probe compiles on Unix.
[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

